--- a/apps/STATIC/pdf-viewer/viewer.css
+++ b/apps/STATIC/pdf-viewer/viewer.css
@@ -1,3 +1,9 @@
+@media (max-width:850px) {
+  a#botlink{
+    display: none;
+  }
+}
+
 /* Copyright 2014 Mozilla Foundation
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
