--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -17,3 +17,10 @@ section#viewer > iframe{
     height: 100%;
     border: 0;
 }
+
+iframe.notLoaded{
+    display: none;
+}
+iframe.notLoaded::before{
+    content: 'Loading';
+}
