index css upd section padding

--- a/apps/static/index.css
+++ b/apps/static/index.css
@@ -83,8 +83,8 @@ section#firstview {
 }
 
 section {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 }
 
 div.feature {
