--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -1,5 +1,6 @@
 section.advert{
-    position: static;
+    position: absolute;
+    bottom: 0;
     display: block;
     width: 100%;
     height: 90px;
