--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -1,4 +1,4 @@
-section.advert{
+section.advert {
     position: absolute;
     bottom: 0;
     display: block;
@@ -6,28 +6,29 @@ section.advert{
     height: 90px;
 }
 
-section#viewer{
+section#viewer {
     position: relative;
     display: block;
     width: 100%;
     height: calc(100% - 90px);
 }
 
-section#viewer > iframe{
+section#viewer>iframe {
+    overflow: scroll;
     width: 100%;
     height: 100%;
     border: 0;
 }
 
-iframe.notLoaded{
+iframe.notLoaded {
     display: none;
 }
 
-.docLoaderText{
+.docLoaderText {
     display: none;
 }
 
-section#viewer:has(iframe.notLoaded) > div.docLoaderText{
+section#viewer:has(iframe.notLoaded)>div.docLoaderText {
     display: block;
     padding: 2rem;
     text-align: center;
