--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -1,6 +1,6 @@
 section.advert {
     position: absolute;
-    bottom: 0;
+    bottom: 10%;
     display: block;
     width: 100%;
     height: 90px;
