--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -3,13 +3,15 @@ section.advert {
     display: block;
     width: 100%;
     height: 120px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 section#viewer {
     position: relative;
     display: block;
     width: 100%;
-    height: calc(100% - 120px);
+    height: calc(100% - 140px);
 }
 
 section#viewer>iframe {
