--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -3,8 +3,7 @@ section.advert {
     display: block;
     width: 100%;
     height: 120px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 section#viewer {
