--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -1,7 +1,7 @@
 section.advert {
     position: relative;
     display: block;
-    width: 100%;
+    width: calc( 100% - 20px );
     height: 120px;
     margin: 10px;
 }
