--- a/apps/static/docs-viewer/index.css
+++ b/apps/static/docs-viewer/index.css
@@ -52,6 +52,8 @@ section#viewer:has(iframe.notLoaded) p.loadertext {
     padding: 1rem;
     color: #ffffff;
     font-family: cursive;
+    font-weight: 600;
+    font-size: 1.5rem;
 }
 
 div.advertcontainer{
@@ -66,61 +68,61 @@ div.advertcontainer{
   }
 
   .semipolar-spinner {
-    height: 75px;
-    width: 75px;
+    height: 95px;
+    width: 95px;
     position: relative;
   }
 
   .semipolar-spinner .ring {
     border-radius: 50%;
     position: absolute;
-    border: calc(65px * 0.05) solid transparent;
+    border: calc(95px * 0.05) solid transparent;
     border-top-color: #ffffff;
     border-left-color: #ffffff;
     animation: semipolar-spinner-animation 2s infinite;
   }
 
   .semipolar-spinner .ring:nth-child(1) {
-    height: calc(65px - 65px * 0.2 * 0);
-    width: calc(65px - 65px * 0.2 * 0);
-    top: calc(65px * 0.1 * 0);
-    left: calc(65px * 0.1 * 0);
+    height: calc(95px - 95px * 0.2 * 0);
+    width: calc(95px - 95px * 0.2 * 0);
+    top: calc(95px * 0.1 * 0);
+    left: calc(95px * 0.1 * 0);
     animation-delay: calc(2000ms * 0.1 * 4);
     z-index: 5;
   }
 
   .semipolar-spinner .ring:nth-child(2) {
-    height: calc(65px - 65px * 0.2 * 1);
-    width: calc(65px - 65px * 0.2 * 1);
-    top: calc(65px * 0.1 * 1);
-    left: calc(65px * 0.1 * 1);
+    height: calc(95px - 95px * 0.2 * 1);
+    width: calc(95px - 95px * 0.2 * 1);
+    top: calc(95px * 0.1 * 1);
+    left: calc(95px * 0.1 * 1);
     animation-delay: calc(2000ms * 0.1 * 3);
     z-index: 4;
   }
 
   .semipolar-spinner .ring:nth-child(3) {
-    height: calc(65px - 65px * 0.2 * 2);
-    width: calc(65px - 65px * 0.2 * 2);
-    top: calc(65px * 0.1 * 2);
-    left: calc(65px * 0.1 * 2);
+    height: calc(95px - 95px * 0.2 * 2);
+    width: calc(95px - 95px * 0.2 * 2);
+    top: calc(95px * 0.1 * 2);
+    left: calc(95px * 0.1 * 2);
     animation-delay: calc(2000ms * 0.1 * 2);
     z-index: 3;
   }
 
   .semipolar-spinner .ring:nth-child(4) {
-    height: calc(65px - 65px * 0.2 * 3);
-    width: calc(65px - 65px * 0.2 * 3);
-    top: calc(65px * 0.1 * 3);
-    left: calc(65px * 0.1 * 3);
+    height: calc(95px - 95px * 0.2 * 3);
+    width: calc(95px - 95px * 0.2 * 3);
+    top: calc(95px * 0.1 * 3);
+    left: calc(95px * 0.1 * 3);
     animation-delay: calc(2000ms * 0.1 * 1);
     z-index: 2;
   }
 
   .semipolar-spinner .ring:nth-child(5) {
-    height: calc(65px - 65px * 0.2 * 4);
-    width: calc(65px - 65px * 0.2 * 4);
-    top: calc(65px * 0.1 * 4);
-    left: calc(65px * 0.1 * 4);
+    height: calc(95px - 95px * 0.2 * 4);
+    width: calc(95px - 95px * 0.2 * 4);
+    top: calc(95px * 0.1 * 4);
+    left: calc(95px * 0.1 * 4);
     animation-delay: calc(2000ms * 0.1 * 0);
     z-index: 1;
   }
